--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^4.2.2",
+        "@ckeditor/ckeditor5-build-classic": "^23.0.0",
+        "@ckeditor/ckeditor5-react": "^2.1.0",
         "@craco/craco": "^5.7.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "add": "^2.0.6",
         "antd": "^4.6.6",
         "axios": "^0.20.0",
         "craco-less": "^1.17.0",
+        "es6-shim": "^0.35.5",
         "jwt-decode": "^3.0.0",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
-        "redux-saga": "^1.1.3"
+        "redux-saga": "^1.1.3",
+        "yarn": "^1.22.10"
     },
     "scripts": {
         "start": "craco start",
