--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "antd": "^4.6.6",
         "axios": "^0.20.0",
         "craco-less": "^1.17.0",
+        "draft-js": "^0.11.7",
         "es6-shim": "^0.35.5",
         "jwt-decode": "^3.0.0",
         "node-sass": "^4.14.1",
